--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm run lint
 
       - name: Run Jest tests
-        run: npm test
+        run: npm run test
 
       - name: Build project
         run: npm run build
